2005-11-05  Kornél Pál  <kornelpal@hotmail.com>

	* AssemblyInfo.cs: Use Consts.MonoVersion as AssemblyVersion.
	* prj2make.exe.sources: Added Consts.cs.

2005-09-28  Sureshkumar T  <tsureshkumar@novell.com>

	* MsPrjHelper.cs (MsSlnHelper): add resgen.

	* CsprojInfo.cs (CsprojInfo): If resource file ends with .resx
	convert them into .resources.

2005-02-19  Miguel de Icaza  <miguel@novell.com>

	* MsPrjHelper.cs, MdPrjHelper.cs: Escape path names, as they might
	contain empty spaces in the path.

2004-07-05  Francisco T. Martinez <paco@mfcon.com>
	* CsprojInfo.cs 1.2:
	* MsPrjHelper.cs 1.11:
	* PrjxInfo.cs 1.6:
	* csproj_ver2003.cs 1.2:
		Changes due to recommendation (patch) from Iain McCoy

	* MsPrjHelper.cs 1.10:
		Got rid of some diagnostics WriteLines and cut down on the
		number of times I call upon pkg-config

	* MdPrjHelper.cs 1.7:
		Add some support for whenever is not possible to get pkg-config
		to give you the base path

2004-06-24  Francisco T. Martinez <paco@mfcon.com>
	* vsprj2makeAddin/Connect.cs 1.8:
	* vsprj2makeSetup/vsprj2makeSetup.vdproj 1.3:
		Added the import MonoDevelop solutions menu option

2004-06-23  Francisco T. Martinez <paco@mfcon.com>
	* vsprj2makeAddin/Connect.cs 1.7:
		Finally got the pop-up menu to work and now has all four choices

2004-06-22  Francisco T. Martinez <paco@mfcon.com>
	* vsprj2makeAddin/Connect.cs 1.3:
	* vsprj2makeSetup/vsprj2makeSetup.vdproj 1.2:
		refined the addin to make use of the VS output pane

	* vsprj2makeAddin/Connect.cs 1.4:
		Added the pop-up menu but should use Namded commands intead of buttons

	* vsprj2makeAddin/Connect.cs 1.6:
		adding some exceprtion handeling to using AddNamedCommand

	* vsprj2makeAddin/Connect.cs 1.5:
		changed back to using AddNamedCommand

2004-06-21  Francisco T. Martinez <paco@mfcon.com>
	* vsprj2make.csproj 1.1:
	* vsprj2make.sln 1.1:
		Initial effort to create a Visual Studio Addin

	* vsprj2makeAddin/AssemblyInfo.cs 1.2:
	* vsprj2makeAddin/Connect.cs 1.2: