@@ -1,3 +1,7 @@
+2006-03-20  Miguel de Icaza  <miguel@novell.com>
+
+	* CsprojInfo.cs: Handle spaces and () in filenames
+
 2005-11-05  Kornél Pál  <kornelpal@hotmail.com>
 
 	* AssemblyInfo.cs: Use Consts.MonoVersion as AssemblyVersion.
